# audio-transcriber

./: .coverage  .dockerignore  .env.example  .gitignore  DOCKER-MCP.md  Dockerfile  MCP-SERVER.md  PORTAINER.md  README.md  docker-build.sh  docker-compose.portainer.yml  docker-compose.yml  mcp-config-example.json  mcp-config.json  pyproject.toml  setup.sh
.github/: copilot-instructions.md
.github/instructions/: english-only-codebase.instructions.md  mcp-development.instructions.md
aws/: deploy.sh  lambda_handler.py  template.yaml
docker/: Dockerfile  docker-compose.yml  nginx.conf
examples/: exemplo_avancado.py  exemplo_basico.py
scripts/: setup.sh  setup_env.py  test_api.py  test_config.py  test_config_validation.py  test_env.py  test_final_validation.sh  test_mcp.py  test_server_integration.py  test_setup.py
src/audio_transcriber/: __init__.py  cli.py
src/audio_transcriber/api/: __init__.py  main.py  models.py  service.py
src/audio_transcriber/core/: __init__.py  config.py  transcriber.py
src/audio_transcriber/mcp/: __init__.py  http_server.py  models.py  server.py  service.py
tests/: __init__.py  test_cli.py  test_transcriber.py
